# exercises-STL-Coders-School

./: .gitignore
algorithms-search-task/: main.cpp
algorithms-task-1/: CMakeLists.txt  main.cpp  test.cpp
array-task-2/: CMakeLists.txt  main.cpp
deque-task/: CMakeLists.txt  main.cpp
forward-list-task/: CMakeLists.txt  main.cpp
functor_divisable_by_six/: CMakeLists.txt  main.cpp
generate-transform/: CMakeLists.txt  functions.cpp  functions.hpp  main.cpp  test.cpp
lambda-tasks/: CMakeLists.txt  main.cpp
list-task/: CMakeLists.txt  main.cpp
map-0x03/: CMakeLists.txt  main.cpp
map-0x05/: main.cpp
middle/: CMakeLists.txt  main.cpp
modifying-algos-task/: CMakeLists.txt  a.out  main.cpp
numeric-algos-task/: CMakeLists.txt  main.cpp
parallel-test/: CMakeLists.txt  main.cpp
pod-read-write/: CMakeLists.txt  main.cpp
searching-algorithms-task/: CMakeLists.txt  main.cpp
set-task-0x08/: main.cpp
vector-task-1/: CMakeLists.txt  main.cpp
vector-task-2/: CMakeLists.txt  main.cpp
